CGCSAuto/utils/test_files/client_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  namespace: default
spec:
  containers:
  - image: mantri425/wind-test:latest
    command: ["/bin/sh","-c"]
    args: ["sleep 60m"]
    imagePullPolicy: IfNotPresent
    name: client-container
  restartPolicy: Always
