CGCSAuto/utils/test_files/qos_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qos
---
apiVersion: v1
kind: Pod
metadata:
  name: qos-pod-1
  namespace: qos
spec:
  containers:
  - name: qos-demo-ctr
    image: nginx
    resources:
      limits:
        memory: "200Mi"
        cpu: "700m"
      requests:
        memory: "200Mi"
        cpu: "700m"
---
apiVersion: v1
kind: Pod
metadata:
  name: qos-pod-2
  namespace: qos
spec:
  containers:
  - name: qos-demo-2-ctr
    image: nginx
    resources:
      limits:
        memory: "200Mi"
      requests:
        memory: "100Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: qos-pod-3
  namespace: qos
spec:
  containers:
  - name: qos-demo-3-ctr
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: qos-pod-with-two-containers
  namespace: qos
spec:
  containers:
  - name: qos-demo-4-ctr-1
    image: nginx
    resources:
      requests:
        memory: "200Mi"

  - name: qos-demo-4-ctr-2
    image: redis
